--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dat.sem3</groupId>
-    <artifactId>moviedb</artifactId>
-    <version></version>
+    <artifactId>startkodeweek36</artifactId>
+    <version>1.0</version>
     <packaging>war</packaging>
 
-    <name>moviedb</name>
+    <name>startkodeweek36</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
